fixed quadmap textbox alignment

--- a/DoTLeafletcss.css
+++ b/DoTLeafletcss.css
@@ -611,8 +611,13 @@
 	color: blue;
 	font-size: 16px;
 }   
-.label .labelQuad div {
+.label div {
 	position: relative;
 	left: -50%;
+	text-shadow: 0px 2px 1px rgba(255,255,255,0.85);
+}
+.labelQuad div {
+	position: relative;
+	left: -35%;
 	text-shadow: 0px 2px 1px rgba(255,255,255,0.85);
 }
